; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usb_suspend_resume_sub.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usb_suspend_resume_sub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"%s failed\0A\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"Suspend\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"Resume\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_device*, i32*, i64)* @usb_suspend_resume_sub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_suspend_resume_sub(%struct.usb_device* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.usb_device*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.usb_device* %0, %struct.usb_device** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  br label %35

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @device_is_attached(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %11
  br label %35

16:                                               ; preds = %11
  %17 = load i64, i64* %6, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @DEVICE_SUSPEND(i32* %20)
  store i32 %21, i32* %7, align 4
  br label %25

22:                                               ; preds = %16
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @DEVICE_RESUME(i32* %23)
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %22, %19
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %25
  %29 = load i32*, i32** %5, align 8
  %30 = load i64, i64* %6, align 8
  %31 = icmp ne i64 %30, 0
  %32 = zext i1 %31 to i64
  %33 = select i1 %31, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0)
  %34 = call i32 @device_printf(i32* %29, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %33)
  br label %35

35:                                               ; preds = %10, %15, %28, %25
  ret void
}

declare dso_local i32 @device_is_attached(i32*) #1

declare dso_local i32 @DEVICE_SUSPEND(i32*) #1

declare dso_local i32 @DEVICE_RESUME(i32*) #1

declare dso_local i32 @device_printf(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
